--- a/pages/2682.html
+++ b/pages/2682.html
@@ -616,7 +616,7 @@ margin-left: 0em;
 
 <p>One widely studied class of modli-stabilized solutions to the string-theory background equations is that of <strong><a class='existingWikiWord' href='/nlab/show/flux+compactification'>flux compactifications</a></strong>.</p>
 
-<p>These are classical solutions to the corresponding <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> theory that are of the form <math class='maruku-mathml' display='inline' id='mathml_587f786ac2fe51c9a6bf199701efa36953d65756_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>M</mi> <mn>4</mn></msup><mo>×</mo><mi>CY</mi></mrow><annotation encoding='application/x-tex'>M^4 \times CY</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_587f786ac2fe51c9a6bf199701efa36953d65756_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math> some <a class='existingWikiWord' href='/nlab/show/Calabi-Yau+variety'>Calabi-Yau manifold</a> of six real dimensions such that the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a> in the solution has nontrivial values on <math class='maruku-mathml' display='inline' id='mathml_587f786ac2fe51c9a6bf199701efa36953d65756_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math>. Its components are called the <em><a class='existingWikiWord' href='/nlab/show/flux'>fluxes</a></em> .</p>
+<p>These are classical solutions to the corresponding <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> theory that are of the form <math class='maruku-mathml' display='inline' id='mathml_b69a537e020bcd3a287dfef539871097718acf56_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>M</mi> <mn>4</mn></msup><mo>×</mo><mi>CY</mi></mrow><annotation encoding='application/x-tex'>M^4 \times CY</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_b69a537e020bcd3a287dfef539871097718acf56_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math> some <a class='existingWikiWord' href='/nlab/show/Calabi-Yau+variety'>Calabi-Yau manifold</a> of six real dimensions such that the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a> in the solution has nontrivial values on <math class='maruku-mathml' display='inline' id='mathml_b69a537e020bcd3a287dfef539871097718acf56_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math>. Its components are called the <em><a class='existingWikiWord' href='/nlab/show/flux'>fluxes</a></em> .</p>
 
 <p>The presence of this <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a> in the solution induces an effective potential for the scalar moduli fields that parameterize the geometry of CY. Hence by choosing the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a> suitably one can find classical solutions in which all these moduli have values that are constant in time.</p>
 
@@ -778,6 +778,12 @@ margin-left: 0em;
 <li id='Vafa05'><a class='existingWikiWord' href='/nlab/show/Cumrun+Vafa'>Cumrun Vafa</a>, <em>The String Landscape and the Swampland</em> (<a href='http://arxiv.org/abs/hepth/0509212'>arXiv:hepth/0509212</a>)</li>
 </ul>
 
+<p>See also</p>
+
+<ul>
+<li>T. Daniel Brennan, Federico Carta, <a class='existingWikiWord' href='/nlab/show/Cumrun+Vafa'>Cumrun Vafa</a>, <em>The String Landscape, the Swampland, and the Missing Corner</em> (<a href='https://arxiv.org/abs/1711.00864'>arXiv:1711.00864</a>)</li>
+</ul>
+
 <h3 id='ReferencesPhenomenologicalSpeculation'>Phenomenological speculation</h3>
 
 <p>Early and technical articles that amplified the existence of a finite but very large number of string theory compactifications are</p>
@@ -824,7 +830,7 @@ margin-left: 0em;
 
 <p>The articles <a href='#LercheLustSchellekens86'>Lerche-Lüst-Schellekens 86</a>, <a href='#LercheLustSchellekens87'>Lerche-Lüst-Schellekens 87</a>, and the speech <a href='#Schellekens98'>Schellekens 98</a>, did not cause much of excitement then. Also they did not discuss <a class='existingWikiWord' href='/nlab/show/moduli+stabilization'>moduli stabilization</a>, which could still have been thought to reduce the number of vacua. Excitement was only later caused instead by more vague discussion of flux compactification vacua with moduli stabilization in type IIB string theory:</p>
 
-<p>That there are <math class='maruku-mathml' display='inline' id='mathml_587f786ac2fe51c9a6bf199701efa36953d65756_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mi>hundreds</mi></msup></mrow><annotation encoding='application/x-tex'>10^{hundreds}</annotation></semantics></math> different flux compactifications was maybe first said explicitly in</p>
+<p>That there are <math class='maruku-mathml' display='inline' id='mathml_b69a537e020bcd3a287dfef539871097718acf56_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mi>hundreds</mi></msup></mrow><annotation encoding='application/x-tex'>10^{hundreds}</annotation></semantics></math> different flux compactifications was maybe first said explicitly in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Raphael+Bousso'>Raphael Bousso</a>, <a class='existingWikiWord' href='/nlab/show/Joseph+Polchinski'>Joseph Polchinski</a>, <em>Quantization of Four-form Fluxes and Dynamical Neutralization of the Cosmological Constant</em> (<a href='http://arxiv.org/abs/hep-th/0004134'>arXiv:hep-th/0004134</a>)</li>
@@ -846,7 +852,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>The specific (but arbitrary) value “<math class='maruku-mathml' display='inline' id='mathml_587f786ac2fe51c9a6bf199701efa36953d65756_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math>” for the typical number of flux compactification, which became iconic in public discussion of the issue, originates in</p>
+<p>The specific (but arbitrary) value “<math class='maruku-mathml' display='inline' id='mathml_b69a537e020bcd3a287dfef539871097718acf56_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math>” for the typical number of flux compactification, which became iconic in public discussion of the issue, originates in</p>
 
 <ul>
 <li id='Douglas04'>
@@ -864,7 +870,7 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Suyay+Ashok'>Suyay Ashok</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Douglas'>Michael Douglas</a>, <em>Counting flux vacua</em>, JHEP, vol. 0401, p. 060, 2004</li>
 </ul>
 
-<p>had considered <math class='maruku-mathml' display='inline' id='mathml_587f786ac2fe51c9a6bf199701efa36953d65756_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>120</mn></msup></mrow><annotation encoding='application/x-tex'>10^{120}</annotation></semantics></math> and earlier <a href='#LercheLustSchellekens87'>Lerche-Lüst-Schellekens 87</a> had <math class='maruku-mathml' display='inline' id='mathml_587f786ac2fe51c9a6bf199701efa36953d65756_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>1500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{1500}</annotation></semantics></math>.</p>
+<p>had considered <math class='maruku-mathml' display='inline' id='mathml_b69a537e020bcd3a287dfef539871097718acf56_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>120</mn></msup></mrow><annotation encoding='application/x-tex'>10^{120}</annotation></semantics></math> and earlier <a href='#LercheLustSchellekens87'>Lerche-Lüst-Schellekens 87</a> had <math class='maruku-mathml' display='inline' id='mathml_b69a537e020bcd3a287dfef539871097718acf56_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>1500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{1500}</annotation></semantics></math>.</p>
 
 <p>A review of the issue of flux compactifications is in</p>
 
@@ -890,14 +896,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  7, 2018 10:25:29 
+  Revised on February 15, 2018 08:34:11 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/landscape+of+string+theory+vacua" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/landscape+of+string+theory+vacua/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/landscape+of+string+theory+vacua" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/landscape+of+string+theory+vacua" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/landscape+of+string+theory+vacua" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/landscape+of+string+theory+vacua/30" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(30 revisions)</span> | <a href="/nlab/show/diff/landscape+of+string+theory+vacua" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/landscape+of+string+theory+vacua" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
