--- a/pages/7230.html
+++ b/pages/7230.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -451,7 +451,7 @@ margin-left: 0em;
 <p>Discussion of <a class='existingWikiWord' href='/nlab/show/G2+manifold'>G2 manifolds</a> is in</p>
 
 <ul>
-<li>Spiro Karigiannis, <em><math class='maruku-mathml' display='inline' id='mathml_07b5c21d9e98307b09da737c9d127a516ffd61fa_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-manifolds – Exceptional structures in geometry arising from exceptional algebra</em> (<a href='http://www.math.uwaterloo.ca/~karigian/talks/waterloo.pdf'>pdf</a>)</li>
+<li>Spiro Karigiannis, <em><math class='maruku-mathml' display='inline' id='mathml_be7f03cab11ebcb55023bee8edaafca75257f66e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-manifolds – Exceptional structures in geometry arising from exceptional algebra</em> (<a href='http://www.math.uwaterloo.ca/~karigian/talks/waterloo.pdf'>pdf</a>)</li>
 </ul>
 
 <h3 id='in_supergravity'>In supergravity</h3>
@@ -460,7 +460,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/George+Papadopoulos'>George Papadopoulos</a>, <a class='existingWikiWord' href='/nlab/show/Paul+Townsend'>Paul Townsend</a>, <em>Compactifications of <math class='maruku-mathml' display='inline' id='mathml_07b5c21d9e98307b09da737c9d127a516ffd61fa_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>11</mn></mrow><annotation encoding='application/x-tex'>D = 11</annotation></semantics></math> supergravity on spaces of exceptional holonomy</em> (<a href='http://arxiv.org/abs/hep-th/9506150'>arXiv:hep-th/9506150</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/George+Papadopoulos'>George Papadopoulos</a>, <a class='existingWikiWord' href='/nlab/show/Paul+Townsend'>Paul Townsend</a>, <em>Compactifications of <math class='maruku-mathml' display='inline' id='mathml_be7f03cab11ebcb55023bee8edaafca75257f66e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>11</mn></mrow><annotation encoding='application/x-tex'>D = 11</annotation></semantics></math> supergravity on spaces of exceptional holonomy</em> (<a href='http://arxiv.org/abs/hep-th/9506150'>arXiv:hep-th/9506150</a>)</p>
 </li>
 
 <li>
@@ -480,11 +480,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Yuho Sakatani, Shozo Uehara, <em>Branes in Extended Spacetime: Brane Worldvolume Theory Based on Duality Symmetry</em>, Phys. Rev. Lett. 117, 191601 (2016) (<a href='https://arxiv.org/abs/1607.04265'>arXiv:1607.04265</a>)</p>
+<p>Yuho Sakatani, Shozo Uehara, <em>Branes in Extended Spacetime: Brane Worldvolume Theory Based on Duality Symmetry</em>, Phys. Rev. Lett. 117, 191601 (2016) (<a href='https://arxiv.org/abs/1607.04265'>arXiv:1607.04265</a>, <a href='http://www2.yukawa.kyoto-u.ac.jp/~qft.web/2016/slides/sakatani.pdf'>talk slides</a>)</p>
 </li>
 
 <li>
-<p>Yuho Sakatani, Shozo Uehara, <em>Exceptional M-brane sigma models and <math class='maruku-mathml' display='inline' id='mathml_07b5c21d9e98307b09da737c9d127a516ffd61fa_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>η</mi></mrow><annotation encoding='application/x-tex'>\eta</annotation></semantics></math>-symbols</em> (<a href='https://arxiv.org/abs/1712.10316'>arXiv:1712.10316</a>)</p>
+<p>Yuho Sakatani, Shozo Uehara, <em>Exceptional M-brane sigma models and <math class='maruku-mathml' display='inline' id='mathml_be7f03cab11ebcb55023bee8edaafca75257f66e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>η</mi></mrow><annotation encoding='application/x-tex'>\eta</annotation></semantics></math>-symbols</em> (<a href='https://arxiv.org/abs/1712.10316'>arXiv:1712.10316</a>)</p>
 </li>
 </ul>
 
@@ -493,14 +493,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 13, 2018 13:58:08 
+  Revised on February 16, 2018 06:43:47 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/exceptional+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exceptional+geometry/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/exceptional+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exceptional+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/exceptional+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exceptional+geometry/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/exceptional+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exceptional+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
