--- a/pages/8237.html
+++ b/pages/8237.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,7 +312,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <em><a class='existingWikiWord' href='/nlab/show/lattice+in+a+vector+space'>lattice in a vector space</a></em> is called <em>integral</em> if the canonical <a class='existingWikiWord' href='/nlab/show/inner+product+space'>inner product</a> of all pairs of lattice vectors is is <a class='existingWikiWord' href='/nlab/show/integer'>integer</a> number.</p>
+<p>A <em><a class='existingWikiWord' href='/nlab/show/lattice+%28discrete+subgroup%29'>lattice in a vector space</a></em> is called <em>integral</em> if the canonical <a class='existingWikiWord' href='/nlab/show/inner+product+space'>inner product</a> of all pairs of lattice vectors is an <a class='existingWikiWord' href='/nlab/show/integer'>integer</a> number.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -331,14 +331,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on August 25, 2012 22:13:03 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.106.150)
+  Revised on February 18, 2018 12:20:00 
+  by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
+  (69.112.103.83)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/integral+lattice" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/integral+lattice" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/integral+lattice/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/integral+lattice" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/integral+lattice" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
